--- a/server/package.json
+++ b/server/package.json
@@ -3,18 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-dev": "ts-node-dev --poll --respawn ./index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "pg": "^8.7.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/pg": "^8.6.1"
+    "@types/pg": "^8.6.1",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.4"
   }
 }
