--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/pg": "^8.6.1",
+    "dotenv": "^10.0.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   }
