--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,18 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-pg-simple": "^7.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
+    "@types/passport-local": "^1.0.34",
     "@types/pg": "^8.6.1",
     "dotenv": "^10.0.0",
     "ts-node-dev": "^1.1.8",
