--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,17 @@
     "build": "webpack --mode production",
     "test": "jest --watch --silent=false"
   },
+  "proxy": "http://localhost:5000/",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "dayjs": "^1.10.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-query": "^3.16.0",
     "recoil": "^0.4.1"
   },
   "devDependencies": {
