--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,7 +20,9 @@
         "baseUrl": "./",
         "paths": {
             "components/*": ["src/components/*"],
-            "hooks/*": ["src/hooks/*"]
+            "hooks/*": ["src/hooks/*"],
+            "helpers/*": ["src/helpers/*"],
+            "state/*": ["src/state/*"]
         }
     }
 }
