(server) Install ts-jest for testing. Write function to convert object properties from snake_case to camelCase and implement it in dbQuery functions. Create function to get habits and their completion histories from the database.

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,11 +12,7 @@
         "skipLibCheck": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "types": ["node"],
-        "typeRoots": [
-            "./node_modules/@types",
-            "../../shared/types"
-        ],
+        "types": ["jest", "node"],
         "paths": {
             "@shared/*": ["../shared/*"]
         }
