--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch --silent=false",
     "start-dev": "ts-node-dev --poll --respawn ./index.ts"
   },
   "keywords": [],
@@ -23,9 +23,12 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
+    "@types/jest": "^27.0.2",
     "@types/passport-local": "^1.0.34",
     "@types/pg": "^8.6.1",
     "dotenv": "^10.0.0",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   }
