--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,13 @@
   "dependencies": {
     "axios": "^0.24.0",
     "dayjs": "^1.10.7",
+    "history": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-query": "^3.16.0",
+    "react-router": "^6.0.0",
+    "react-router-dom": "^6.0.0",
     "recoil": "^0.4.1"
   },
   "devDependencies": {
