--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-query": "^3.16.0",
     "react-router": "^6.0.0",
     "react-router-dom": "^6.0.0",
-    "recoil": "^0.4.1"
+    "recoil": "^0.4.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
@@ -33,6 +34,7 @@
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.29",
     "@types/react-dom": "^17.0.9",
+    "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "babel-loader": "^8.2.2",
