--- a/client/package.json
+++ b/client/package.json
@@ -50,7 +50,7 @@
     "sass-loader": "^12.2.0",
     "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.4.4",
+    "typescript": "^4.5.0-beta",
     "webpack": "^5.62.1",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1"
