--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -25,5 +25,6 @@
             "state/*": ["src/state/*"],
             "types/*": ["src/types/*"]
         }
-    }
+    },
+    "exclude": ["node_modules", "./node_modules"],
 }
