--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
         "jest": "^27.0.1"
     },
     "dependencies": {
-        "typescript": "^4.4.4"
+        "typescript": "^4.5.0-beta"
     }
 }
