--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "homepage": "/",
   "scripts": {
-    "serve": "webpack serve --mode development",
+    "serve": "webpack-dev-server --mode development --config webpack.config.js",
     "build": "webpack --mode production",
     "test": "jest --watch --silent=false"
   },
