(fix) change props type on Weekly/Monthly/YearlyEntry components. Add /shared symlink on in client config. Fix makePooledQuery generic type to have default

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -23,7 +23,8 @@
             "hooks/*": ["src/hooks/*"],
             "helpers/*": ["src/helpers/*"],
             "state/*": ["src/state/*"],
-            "types/*": ["src/types/*"]
+            "types/*": ["src/types/*"],
+            "shared/*": ["../shared/*"]
         }
     },
     "exclude": ["node_modules", "./node_modules"],
