--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,11 @@
 {
   "name": "server",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "scripts": {
     "test": "jest --watch --silent=false",
+    "build": "tsc",
+    "start": "node ./dist/server/index.js",
     "start-dev": "ts-node-dev --poll --respawn ./index.ts"
   },
   "keywords": [],
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/connect-pg-simple": "^7.0.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/jest": "^27.0.2",
