(deploy) make typescript non-dev dependency so docker can run build. move /shared from top-level to inside /server.

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -24,7 +24,7 @@
             "helpers/*": ["src/helpers/*"],
             "state/*": ["src/state/*"],
             "types/*": ["src/types/*"],
-            "shared/*": ["../shared/*"]
+            "shared/*": ["../server/shared/*"]
         }
     },
     "exclude": ["node_modules", "./node_modules"],
