--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,11 @@
 {
   "name": "server",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "scripts": {
     "test": "jest --watch --silent=false",
     "build": "tsc",
-    "start": "node ./dist/server/index.js",
+    "start": "node ./dist/index.js",
     "start-dev": "ts-node-dev --poll --respawn ./index.ts"
   },
   "keywords": [],
@@ -19,7 +19,8 @@
     "express-session": "^1.17.2",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "typescript": "^4.5.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -32,7 +33,6 @@
     "dotenv": "^10.0.0",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.4"
+    "ts-node-dev": "^1.1.8"
   }
 }
