--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -14,7 +14,7 @@
         "experimentalDecorators": true,
         "types": ["jest", "node"],
         "paths": {
-            "@shared/*": ["../shared/*"]
+            "@shared/*": ["./shared/*"]
         }
     },
     "exclude": ["./node_modules", "node_modules"]    
